--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "angular-chart.js": "~0.8.8",
+    "Chart.js": "~1.0.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
