--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "angular-touch": "^1.4.0",
     "angular-ui-router": "~0.2.15",
     "angular-chart.js": "~0.8.8",
-    "Chart.js": "~1.0.2"
+    "Chart.js": "~1.0.2",
+    "angular-ui-bootstrap": "~1.1.0",
+    "angular-bootstrap": "~1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
