--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "twebte2",
   "private": true,
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "bower": "1.6.7"
+  },
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
     "grunt": "^0.4.5",
@@ -28,8 +34,7 @@
     "grunt-wiredep": "^2.0.0",
     "jit-grunt": "^0.9.1",
     "time-grunt": "^1.0.0",
-    "jshint-stylish": "^1.0.0",
-	"bower": "1.6.7"
+    "jshint-stylish": "^1.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
